--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-numpy>=1.21.0
-torch==1.11.0
-torchaudio==0.11.0
-torchvision==0.12.0
-librosa>=0.10.0
-soundfile>=0.12.1
-tqdm>=4.65.0
-boto3>=1.26.0
-requests>=2.31.0
-matplotlib>=3.7.0
 hear21passt
+matplotlib
+pydub==0.25.1
+simpleaudio==1.0.4
+numpy==1.24.3
